--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,7 +3,7 @@
     <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
       <div class="inner-feature-content-container" accordion>
-        <div ng-repeat="item in items" ng-controller="ItemsController" accordion-item heading="{{item.title}}" >
+        <div ng-repeat="item in items" accordion-item heading="{{item.title}}" >
           <div item-content></div>
         </div>
       </div>
