Added main-view directive which encapsulates failure and tip modals

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <div role="main" ng-view/>
+  <div main-view></div>
 
   <script src="static/em.min.js"></script>
   <script>
