--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -12,8 +12,8 @@
     <link rel="shortcut icon" href="landing/favicon.ico"/>
 </head>
 <body>
-
-    <div role="main" ng-view/>
+    
+    <div main-view></div>
 
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jquery/jquery.cookie.js"></script>
@@ -63,6 +63,7 @@
     <script src="static/app/auth/AuthenticationService.js"></script>
     <script src="static/app/auth/LoginController.js"></script>
     <script src="static/app/auth/SignupController.js"></script>
+    <script src="static/app/auth/mainViewDirective.js"></script>
 
     <script src="static/app/account/AccountController.js"></script>
     <script src="static/app/account/AccountService.js"></script>
