Somewhat working implementation of accordion title editing

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -73,6 +73,7 @@
     <script src="static/app/tasks/DatesController.js"></script>
     <script src="static/app/tasks/EditTaskController.js"></script>
     <script src="static/app/tasks/TasksListController.js"></script>
+    <script src="static/app/tasks/TasksController.js"></script>
     <script src="static/app/tasks/NewTaskController.js"></script>
     <script src="static/app/tasks/ProjectController.js"></script>
     <script src="static/app/tasks/TasksSlidesService.js"></script>
@@ -83,6 +84,7 @@
     <script src="static/app/main/InboxController.js"></script>
     <script src="static/app/main/HomeController.js"></script>
     <script src="static/app/main/ItemsController.js"></script>
+    <script src="static/app/main/EditItemController.js"></script>
     <script src="static/app/main/MainController.js"></script>
     <script src="static/app/main/NavbarController.js"></script>
     <script src="static/app/main/mainDirectives.js"></script>
