--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -40,11 +40,11 @@
         <div class="swiper-no-swiping">
           <form id="omnibar" role="form" name="addOmniItem" ng-submit="addNewItem(omnibarText)">
             <div class="form-group">
-              <div id="omni-input-wrapper">
+              <div class="left-input-wrapper">
                 <label class="sr-only" for="omniItem">omniItem</label>
                 <input type="search" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" ng-focus="omniBarFocus(true)" ng-blur="omniBarFocus(false)" placeholder="store or recall" required>
               </div>
-              <div id="plus-wrapper">
+              <div class="right-button-wrapper">
                 <button class="button" type="button" ng-disabled="!omnibarText.title" ng-click="addNewItem(omnibarText)"><span class="icon-plus" />
                 </button>
               </div>
@@ -52,18 +52,18 @@
           </form>                
         </div>
         <div ng-if="omnibarText.title" id="filtered-items-container">          
-          <div class="filtered-items" ng-show="filteredItems.length">
+          <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
             <h3><a href ng-click="gotoInbox()">inbox</a></h3>
             <div class="inner-feature-content-container" accordion>
-              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-item heading="{{item.title}}" >
+              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)">
                 <div ng-include="'static/app/main/itemActions.html'"></div>
               </div>
             </div>
           </div>
-          <div class="filtered-items" ng-show="filteredTasks.length">
+          <div class="filtered-items" ng-show="filteredTasks.length" ng-controller="TasksController">
             <h3><a href ng-click="gotoTasks()">tasks</a></h3>
             <div class="inner-feature-content-container" accordion>
-              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})" accordion-item heading="{{task.title}}" >
+              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})" accordion-item="task"  edit-item="editTask(task)" edit-item-title="editTaskTitle(task)">
                 <div task-content></div>
               </div>
             </div>
