--- a/frontend/core/src/main/webapp/static/common/accordionItem.html
+++ b/frontend/core/src/main/webapp/static/common/accordionItem.html
@@ -1,5 +1,19 @@
 <div class="accordion-item">
-  <div class="accordion-heading" ><a class="accordion-toggle" ng-click="isOpen = !isOpen">{{heading}}</a></div>
+  <div class="accordion-title" ng-switch="isOpen">
+    <a ng-switch-when="false" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
+    <form ng-switch-when="true" role="form" name="itemTitleEdit">
+      <div class="form-group">
+        <div class="left-input-wrapper">
+          <label class="sr-only" for="itemTitle">title</label>
+          <input type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)"  class="simple-input swiper-no-swiping" id="itemTitle" ng-model="item.title" placeholder="title..." required>
+        </div>
+        <div class="right-button-wrapper">
+          <button class="button" type="button" ng-click="startItemEdit()"><span class="icon-i" />
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
   <div class="accordion-body" ng-show="isOpen">
     <div class="accordion-inner" ng-transclude></div>
   </div>
