--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,9 +1,9 @@
 <section id="inbox" class="two-column-grid page" ng-controller="InboxController">
   <div class="column">
     <header class="feature-header" feature-header="inbox"></header>
-    <div id="inbox-feature-content-container" class="content-container feature-content-container">
+    <div id="inbox-feature-content-container" class="content-container feature-content-container" ng-controller="ItemsController">
       <div class="inner-feature-content-container" accordion>
-        <div ng-repeat="item in items" accordion-item heading="{{item.title}}" >
+        <div ng-repeat="item in items" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)">
           <div ng-include="'static/app/main/itemActions.html'"></div>
         </div>
       </div>
