--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -9,7 +9,7 @@
             <li ng-class="selected" ng-repeat="project in filteredProjects = (tasks | tasksFilter:filterService.activeFilters.project)">
               <a class="text-muted click-to-slide" href ng-click="goToProject(project.uuid)">
                 <span class="link-title">{{project.title}}</span>
-                <span class="icon-arrow-right" />
+                <span class="icon-arrow-left" />
               </a>
             </li>
           </ul>
@@ -23,7 +23,7 @@
                 <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right" />
               </a>
             </li>
-          </ul>        
+          </ul>      
         </section>
       </div>
     </div>
