multirow list item indent fix

--- a/frontend/core/src/main/webapp/static/app/tasks/dateSlide.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dateSlide.html
@@ -1,5 +1,5 @@
 <div class="inner-slide-content-container" >
-  <section class="date">
+  <section id="date" class="date">
     <h3>{{date.displayDate}}</h3>
     <div tasks-list="tasks" subtask="subtaskWithDate" tasks-filter="filter"></div>
   </section>
