--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -31,6 +31,7 @@
     <script src="static/lib/angularjs/angular-mocks.js"></script>
 
     <script src="static/lib/base64.js"></script>
+    <script src="static/lib/expanding.js"></script>
 
     <script src="static/app/app.js"></script>
 
@@ -55,6 +56,7 @@
     <script src="static/app/base/SwiperService.js"></script>
     <script src="static/app/base/TagsService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
+    <script src="static/app/base/expandingTextareaDirective.js"></script>   
     <script src="static/app/base/itemsServices.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
@@ -72,7 +74,6 @@
     <script src="static/app/tasks/ContextController.js"></script>
     <script src="static/app/tasks/DatesController.js"></script>
     <script src="static/app/tasks/EditTaskController.js"></script>
-    <script src="static/app/tasks/TasksListController.js"></script>
     <script src="static/app/tasks/TasksController.js"></script>
     <script src="static/app/tasks/NewTaskController.js"></script>
     <script src="static/app/tasks/ProjectController.js"></script>
