--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -1,5 +1,5 @@
 <div ng-switch="itemType" ng-controller="ItemsController">
-  <div class="item-sorting-container" ng-switch-default>
+  <div class="item-actions" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-three">
         <button class="normal-button small-border-right" type="button" ng-disabled="true">
