--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -4,7 +4,7 @@
     <div id="inbox-feature-content-container" class="content-container feature-content-container" ng-controller="ItemsController">
       <div class="inner-feature-content-container" accordion>
         <div ng-repeat="item in items" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)">
-          <div ng-include="'static/app/main/itemActions.html'"></div>
+          <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
         </div>
       </div>
     </div>
