Pressing plus button on omnibar now opens new item edit screen

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -45,7 +45,7 @@
                 <input type="search" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" ng-focus="omniBarFocus(true)" ng-blur="omniBarFocus(false)" placeholder="store or recall" required>
               </div>
               <div class="right-button-wrapper">
-                <button class="button" type="button" ng-disabled="!omnibarText.title" ng-click="addNewItem(omnibarText)"><span class="icon-plus" />
+                <button class="button" type="button" ng-click="addNewItem(omnibarText)"><span class="icon-plus" />
                 </button>
               </div>
             </div>
