--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -1,8 +1,9 @@
-<div class="no-slides-container">
+<div class="no-slides-container" ng-controller="EditItemController">
   <section id="edit-item" class="one-column-grid page">
     <div class="column">
       <header class="heading-header">
-        <h3>edit item</h3>
+        <h3 ng-if="item.uuid">edit item</h3>
+        <h3 ng-if="!item.uuid">new item</h3>
       </header>
       <div class="content-container simple-content-container">
         <form role="form" name="itemEdit">
