Added checkbox to accordion

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -55,7 +55,7 @@
           <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
             <h3><a href ng-click="gotoInbox()">inbox</a></h3>
             <div class="inner-feature-content-container" accordion>
-              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)">
+              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false">
                 <div ng-include="'static/app/main/itemActions.html'"></div>
               </div>
             </div>
@@ -63,8 +63,8 @@
           <div class="filtered-items" ng-show="filteredTasks.length" ng-controller="TasksController">
             <h3><a href ng-click="gotoTasks()">tasks</a></h3>
             <div class="inner-feature-content-container" accordion>
-              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})" accordion-item="task"  edit-item="editTask(task)" edit-item-title="editTaskTitle(task)">
-                <div task-content></div>
+              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})" accordion-item="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)">
+                <div class="accordion-inner" ng-include="'static/app/tasks/taskContent.html'"></div>
               </div>
             </div>
           </div>
