--- a/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
@@ -1,6 +1,7 @@
-<ul class="list-unstyled">
-  <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:tasksFilter">
-    <div task="task"></div>
-  </li>
+
+<div class="inner-feature-content-container" accordion>
+  <div ng-repeat="task in tasks | tasksFilter:tasksFilter" accordion-item="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)">
+    <div class="accordion-inner" ng-include="'static/app/tasks/taskContent.html'"></div>
+  </div>
   <div sub-task add="addSubtask(subtask)" subtask="subtask"></div>
-</ul>
+</div>
