--- a/frontend/core/src/main/webapp/static/common/accordionItem.html
+++ b/frontend/core/src/main/webapp/static/common/accordionItem.html
@@ -1,9 +1,17 @@
 <div class="accordion-item">
-  <div class="accordion-title" ng-switch="isOpen">
-    <a ng-switch-when="false" id="accordionTitleLink" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
+  <div class="accordion-title" ng-switch="isOpen">  
+    <div ng-if="hasComplete && !isOpen" class="left-checkbox-wrapper">
+      <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
+      <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
+    </div>
+    <a ng-switch-when="false" id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
     <form ng-switch-when="true" role="form" name="itemTitleEdit">
       <div class="form-group">
-        <div class="left-input-wrapper">
+        <div ng-if="hasComplete" class="left-checkbox-wrapper">
+          <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
+          <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
+        </div>
+        <div ng-class="getTitleInputClass()">
           <label class="sr-only" for="accordionTitleInput">title</label>
           <input id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." required>
         </div>
