login page css for phonegap

--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -1,5 +1,5 @@
 <div class="no-slides-container" ng-controller="LoginController">
-  <section id="login" class="one-column-grid fixed-height page">
+  <section id="login" class="one-column-grid">
     <div class="column">
       <div class="banner">
         <span class="icon-logo_with_text" />
