Better buttons formatting

--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -1,7 +1,9 @@
 <div ng-controller="TasksController">
-  <li ng-repeat="value in task | visibleTaskContent">
-    <span><small>{{value}}</small></span>
-  </li>
+  <ul class="indent">
+    <li ng-repeat="value in task | visibleTaskContent">
+      <span><small>{{value}}</small></span>
+    </li>
+  </ul>
 
   <div class="task-actions">
     <ul class="button-row">
