--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -19,14 +19,14 @@
     </ul>
   </div>
 
-  <div ng-switch-when="task">
+  <div ng-switch-when="task" ng-controller="TasksController">
     <div class="form-group">
       <label class="sr-only" for="taskParent">parent</label>
       <select class="simple-input swiper-no-swiping" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
         <option value="">select project...</option>
       </select>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-if="contexts.length">
       <label class="sr-only" for="taskContext">context</label>
       <select class="simple-input swiper-no-swiping" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
         <option value="">select context...</option>
