--- a/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
@@ -26,7 +26,7 @@
     </select>
   </div>
 
-  <div class="form-group">
+  <div ng-if="contexts.length" class="form-group">
     <label class="sr-only" for="taskContext">context</label>
     <select class="simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
       <option value="">select context...</option>
