--- a/frontend/core/src/main/webapp/static/app/tasks/projectSlide.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/projectSlide.html
@@ -1,5 +1,5 @@
 <div class="inner-slide-content-container">
-  <section class="project" ng-controller="ProjectController">
+  <section class="project">
     <h3 ng-click="toggleProjectContent()">{{project.title}}</h3>
     <div ng-if="showProjectContent" class="em-item-actions container">
       <ul class="nav nav-justified em-horizontal-buttons">
