Refactored controllers, other small fixes

--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,4 +1,4 @@
-<nav class="{{feature}}-footer swiper-no-swiping" role="navigation">
+<nav class="{{feature}}-footer swiper-no-swiping" role="navigation" ng-controller="NavbarController">
   <ul class="horizontally-justified">
     <li id="inbox-link" class="justified-element">
       <a href ng-click="gotoInbox()" ng-class="isActiveSlide('inbox') && 'active-slide'">
