--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,8 +1,8 @@
-<section id="inbox" class="two-column-grid page" ng-controller="InboxController">
+<section id="inbox" class="two-column-grid page" ng-controller="ItemsController">
   <div class="column">
-    <header class="feature-header" feature-header="inbox"></header>
-    <div id="inbox-feature-content-container" class="content-container feature-content-container" ng-controller="ItemsController">
-      <div class="inner-feature-content-container" accordion>
+    <header class="page-header" ng-init="heading='inbox'" ng-include="'static/app/base/pageHeader.html'"></header>
+    <div id="inbox-page-content-container" class="content-container page-content-container">
+      <div class="inner-page-content-container" accordion>
         <div ng-repeat="item in items" accordion-item="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete>
           <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
         </div>
