--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,7 +1,7 @@
-<section id="tasks-dates" class="two-column-grid page" ng-controller="DatesController">
+<section id="tasks-dates" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
-    <header id="tasks-dates-header" class="feature-header" feature-header="dates"></header>
-    <div id="tasks-dates-feature-content-container" class="content-container feature-content-container">
+    <header id="tasks-dates-header" class="page-header" ng-init="heading='dates'" ng-include="'static/app/base/pageHeader.html'"></header>
+    <div id="tasks-dates-page-content-container" class="content-container page-content-container">
       <div class="swiper-no-swiping" id="date-picker" ng-include="'static/app/tasks/datebar.html'"></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/dates" swiper-type="page">
         <div class="swiper-wrapper">
