--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -1,8 +1,8 @@
-<section id="tasks-lists" class="two-column-grid page">
+<section id="tasks-lists" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
-    <header id="tasks-lists-header" class="feature-header" feature-header="lists"></header>
-    <div id="tasks-lists-feature-content-container" class="content-container feature-content-container">
-      <div class="inner-feature-content-container">
+    <header id="tasks-lists-header" class="page-header" ng-init="heading='lists'" ng-include="'static/app/base/pageHeader.html'"></header>
+    <div id="tasks-lists-page-content-container" class="content-container page-content-container">
+      <div class="inner-page-content-container">
         <section ng-show="filteredProjects && filteredProjects.length">
           <h3>projects</h3>
           <ul class="indent list-arrow-right">
