Modified accordion to close existing when clicking on another list item

--- a/frontend/core/src/main/webapp/static/common/accordionItem.html
+++ b/frontend/core/src/main/webapp/static/common/accordionItem.html
@@ -10,7 +10,7 @@
         <a id="accordionTitleLink" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
       </div>
     </div>
-    <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper">
+    <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-item-open">
       <div ng-if="hasComplete" class="left-checkbox-wrapper">
         <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
         <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
