Fixed bug with not being able to tap buttons on mobile

--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -5,7 +5,7 @@
     </li>
   </ul>
 
-  <div class="task-actions">
+  <div class="item-actions">
     <ul class="button-row">
       <li ng-if="!task.relationships.parentTask" class="button-container" ng-class="getSubtaskButtonClass(task)">
         <button type="button" class="normal-button" ng-click="taskToProject(task)">
