--- a/frontend/core/src/main/webapp/static/common/accordionItem.html
+++ b/frontend/core/src/main/webapp/static/common/accordionItem.html
@@ -1,13 +1,14 @@
 <div class="accordion-item">
   <div ng-switch="isOpen">
-    <div ng-switch-when="false">
+    <div ng-switch-when="false" id="closedAccordionTitleWrapper">
       <div ng-if="hasComplete" class="table-wrapper">
         <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
         <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
         <a id="accordionTitleLink" ng-class="getTitleInputClass()" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
       </div>
-      <div ng-if="!hasComplete">
-        <a id="accordionTitleLink" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
+      <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
+        <div id="accordionTitleHeightFix"></div>
+        <a id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
       </div>
     </div>
     <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-item-open">
