Fixed colors throughout, open accordion item position adjustments

--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -19,7 +19,7 @@
     </li>
     
     <li id="notes-link" class="justified-element">
-      <a class="disabled" href>
+      <a class="disabled">
         <span class="icon-notes" />
       </a>
     </li>
