--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -10,7 +10,7 @@
         <div id="menu-content" ng-if="menuActive">
           <ul>
             <li>
-              <a href ng-click="setMyActive()">home</a>
+              <a href ng-click="setMyActive()" class="active">home</a>
             </li>
             <li ng-show="useCollectives()">
               <span>collectives</span>
