--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -8,8 +8,8 @@
   <div class="item-actions">
     <ul class="button-row">
       <li ng-if="!task.relationships.parentTask" class="button-container" ng-class="getSubtaskButtonClass(task)">
-        <button type="button" class="normal-button" ng-click="taskToProject(task)">
-          add subtask
+        <button type="button" class="enabled-button" ng-click="taskToProject(task)">
+          make list
         </button>
       </li>
       <li ng-if="!task.project" class="button-container" ng-class="getDeleteButtonClass(task)">
