--- a/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
@@ -1,4 +1,4 @@
-<div class="slides-container" ng-controller="MainController">
+<div class="slides-container" ng-init="feature='tasks'" ng-controller="MainController">
   <!-- TODO: use ng-if with expected-slides="tasks.length > 0 && 6 || 2" -->
   <div class="swiper-container main-slides" swiper-container="tasks" swiper-type="main"
   expected-slides="6">
@@ -13,5 +13,5 @@
     <div class="swiper-slide" swiper-slide="tasks/single" ng-include="'static/app/tasks/singleTasks.html'"></div>
   </div>
 </div>
-<footer ng-hide="mainlinksFilter" ng-init="feature='tasks'" ng-include="'static/app/main/footer.html'"></footer>
+<footer ng-hide="mainlinksFilter" ng-include="'static/app/main/footer.html'"></footer>
 </div>
