--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -2,7 +2,7 @@
   <section id="login" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo_with_text" />
+        <span class="icon-logo_with_text"></span>
       </div>
       <div class="content">
         <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
