--- a/frontend/core/src/main/webapp/static/app/base/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/base/pageHeader.html
@@ -3,7 +3,7 @@
   <div class="center-of-three" id="page-heading"><h3>{{heading}}</h3></div>
   <div class="right-of-three" id="add-new-button">
     <button type="button" class="button" ng-click="addNew()">
-      <span class="icon-plus" />
+      <span class="icon-plus"></span>
     </button>
   </div>
 </nav>
