--- a/frontend/core/src/main/webapp/static/common/accordionItem.html
+++ b/frontend/core/src/main/webapp/static/common/accordionItem.html
@@ -21,7 +21,7 @@
         <input id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." required>
       </div>
       <div class="right-button-wrapper">
-        <button class="button" type="button" ng-click="pressItemEdit()"><span class="icon-i" />
+        <button class="button" type="button" ng-click="pressItemEdit()"><span class="icon-i"></span>
         </button>
       </div>
     </form>
