Info textbox modal. Hide it when clicked elsewhere in document.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -40,6 +40,7 @@
     <script src="static/common/accordionItemDirective.js"></script>
     <script src="static/common/DateService.js"></script>
     <script src="static/common/LocationService.js"></script>
+    <script src="static/common/modalDirective.js"></script>
 
     <script src="static/app/base/http/HttpInterceptorService.js"></script>
     <script src="static/app/base/http/HttpBasicAuthenticationService.js"></script>
